test/errors/aggrbug.asp
#maxint=20.
p(VAR_0):-#count{X_G_L0:not  p(VAR_1),nat(X_G_L0),VAR_1=X_G_L0+1,s(VAR_1)},nat(Y_G),VAR_0=Y_G+1,s(VAR_0).
nat(19).
nat(17).
nat(18).
nat(15).
nat(16).
nat(13).
nat(14).
nat(11).
nat(12).
nat(3).
nat(20).
nat(2).
nat(1).
nat(10).
nat(0).
nat(7).
nat(6).
nat(5).
nat(4).
nat(9).
nat(8).
s(6).
s(f(5)).
